--- a/templates/index.html
+++ b/templates/index.html
@@ -9,42 +9,23 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My Duka</a>
+    <a class="navbar-brand" href="/">My Duka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto" >
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">products</a>
-        <a class="nav-link" href="#">sales</a>
-         <a class="nav-link" href="#">stock</a>
-         <button type="button " class="btn btn-primary p-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
+        <a class="nav-link" href="/products">products</a>
+        <a class="nav-link" href="/sales">sales</a>
+         <a class="nav-link" href="/stock">stock</a>
+
         
       </div>
     </div>
   </div>
 </nav>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+
 
     <h1>HOME PAGE</h1>
 
