--- a/templates/products.html
+++ b/templates/products.html
@@ -9,21 +9,55 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My DUka</a>
+    <a class="navbar-brand" href="/">My DUka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Products</a>
-        <a class="nav-link" href="#">Sales</a>
-        <a class="nav-link" href="#">Stock</a>
+        <a class="nav-link " aria-current="page" href="#">Home</a>
+        <a class="nav-link active" href="/products">Products</a>
+        <a class="nav-link" href="/sales">Sales</a>
+        <a class="nav-link" href="/stock">Stock</a>
+
       </div>
     </div>
   </div>
 </nav>
    <h1>products page</h1>
+   <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Add products
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Add products</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      <form action="/add_products" method="post" class="form-control">
+        <label for="name">product name</label><br>
+        <input type="text" id="name" name="pname"><br>
+         <label for="bp">buying_price</label><br>
+         <input type="number" id="bp" name="buying_price"><br>
+         <label for="sp">Selling_price</label><br>
+         <input type="number" id="sp" name="selling_price"><br>
+         <button type="submit" class="btn btn-primary p-2">submit</button>
+         
+
+  
+      </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
    
     <table border="1">
         <tr>
