--- a/templates/sales.html
+++ b/templates/sales.html
@@ -10,16 +10,16 @@
     <h1>SALES PAGE</h1>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My Duka</a>
+    <a class="navbar-brand" href="/">My Duka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">products</a>
-        <a class="nav-link" href="#">sales</a>
-         <a class="nav-link" href="#">stock</a>
+        <a class="nav-link " aria-current="page" href="/">Home</a>
+        <a class="nav-link" href="/products">products</a>
+        <a class="nav-link active" href="/sales">sales</a>
+         <a class="nav-link" href="/stock">stock</a>
         
       </div>
     </div>
