--- a/templates/stock.html
+++ b/templates/stock.html
@@ -9,16 +9,16 @@
   <body>
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My DUka</a>
+    <a class="navbar-brand" href="/">My DUka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link " aria-current="page" href="/">Home</a>
         <a class="nav-link" href="products.html">Products</a>
-        <a class="nav-link" href="#">Sales</a>
-        <a class="nav-link" href="#">Stock</a>
+        <a class="nav-link" href="/sales">Sales</a>
+        <a class="nav-link active" href="/stock">Stock</a>
       </div>
     </div>
   </div>
